objects/Membership__c.object
<CustomObject>
    <fields>
        <fullName>Additional_Email1__c</fullName>
        <description>Although NOT ideal, this is needed since we MUST use WF and WFEA for sending the Membership Email and we need to be able to flag additional emails.  WF dictates this is an email field NOT a mere string.  Apex Emails would get around this, however, the daily email limit prohibits us from using that solution.</description>
        <label>Additional Email1</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email2__c</fullName>
        <description>Although NOT ideal, this is needed since we MUST use WF and WFEA for sending the Membership Email and we need to be able to flag additional emails.  WF dictates this is an email field NOT a mere string.  Apex Emails would get around this, however, the daily email limit prohibits us from using that solution.</description>
        <label>Additional Email2</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Additional_Email3__c</fullName>
        <description>Although NOT ideal, this is needed since we MUST use WF and WFEA for sending the Membership Email and we need to be able to flag additional emails.  WF dictates this is an email field NOT a mere string.  Apex Emails would get around this, however, the daily email limit prohibits us from using that solution.</description>
        <label>Additional Email3</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Agreed_T_C__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Agreed T&amp;C</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AutoRenew_CCD_Order_Number__c</fullName>
        <label>AutoRenew CCD Order Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Order_Failed_Date_Time__c</fullName>
        <description>Date and Time of when ATG failed to create the Auto Renew Order</description>
        <label>Auto Renew Order Failed Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Auto_Renew_Order_Failed__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Will get updated when ATG fails to create an Auto Renew Order</description>
        <label>Auto Renew Order Failed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BC_Renewal_CC_Entity_Code__c</fullName>
        <label>BC Renewal CC Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Renewal_CC_Expiration_Date__c</fullName>
        <label>BC Renewal CC Expiration Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Renewal_CC_Final_4_Digits__c</fullName>
        <label>BC Renewal CC Final 4 Digits</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Renewal_CC_Type__c</fullName>
        <label>BC Renewal CC Type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Renewal_CC_Type_display__c</fullName>
        <formula>CASE(  BC_Renewal_CC_Type__c  , 
&quot;visa&quot;, &quot;Visa&quot;, 
&quot;masterCard&quot;, &quot;MasterCard&quot;, 
&quot;americanExpress&quot;, &quot;American Express&quot;, 
&quot;discover&quot;, &quot;Discover&quot;, 
&quot;RH Card&quot;, &quot;RH Card&quot;, 
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>BC Renewal CC Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BC_Renewal_CC_Updated_DateTime__c</fullName>
        <label>BC Renewal CC Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Cancellation_Date__c</fullName>
        <label>Cancellation Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Cancellation_Reason__c</fullName>
        <label>Cancellation Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Cancellation_Type__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Fraud</fullName>
                </value>
                <value>
                    <fullName>Credit card decline</fullName>
                </value>
                <value>
                    <fullName>Created in error</fullName>
                </value>
                <value>
                    <fullName>Does not use it</fullName>
                </value>
                <value>
                    <fullName>Duplicate membership</fullName>
                </value>
                <value>
                    <fullName>Unhappy with membership</fullName>
                </value>
                <value>
                    <fullName>None given by customer</fullName>
                </value>
                <value>
                    <fullName>Customer does not want it</fullName>
                </value>
                <value>
                    <fullName>Renewal failed</fullName>
                </value>
                <value>
                    <fullName>Quebec</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Cancellation_Type__c</fullName>
        <inlineHelpText>RH Terminated = RH determined that the membership needs to be terminated.
Member Terminated = Member requested and was granted a refund for membership.
Member Cancelled = Member cancelled the membership in My Account.</inlineHelpText>
        <label>Cancellation Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>RH Terminated</fullName>
                </value>
                <value>
                    <fullName>Member Terminated</fullName>
                </value>
                <value>
                    <fullName>Member Cancelled</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Create_Renewal_Order__c</fullName>
        <formula>AND(
 Is_Auto_Renew__c = TRUE,
 ISPICKVAL(Membership_Type__c , &quot;Paid&quot;),
 Expiration_Date__c = TODAY())</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Renewal Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Create_Time_Hour__c</fullName>
        <description>Used for reporting</description>
        <formula>VALUE(MID (TEXT ( CreatedDate - (0.0417 * 7 )), 12, 2))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Create Time Hour</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Created_by_Alternate_Order_ID__c</fullName>
        <description>ATG order number</description>
        <label>Created by Alternate Order ID</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Application__c</fullName>
        <label>Created by Application</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Salesforce.com</fullName>
                </value>
                <value>
                    <fullName>RH - Concierge</fullName>
                </value>
                <value>
                    <fullName>RH - Web</fullName>
                </value>
                <value>
                    <fullName>RHBC - Concierge</fullName>
                </value>
                <value>
                    <fullName>RHBC - Web</fullName>
                </value>
                <value>
                    <fullName>RHTN - Concierge</fullName>
                </value>
                <value>
                    <fullName>RHTN - Web</fullName>
                </value>
                <value>
                    <fullName>RHMO - Concierge</fullName>
                </value>
                <value>
                    <fullName>RHMO - Web</fullName>
                </value>
                <value>
                    <fullName>MAUI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Created_by_Order_ID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Created by Order ID</label>
        <referenceTo>RH_Order__c</referenceTo>
        <relationshipLabel>Memberships</relationshipLabel>
        <relationshipName>Memberships</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_by_Order_Line_Number__c</fullName>
        <description>Used specifically for the Mule process to pick up member card requests for RRD.</description>
        <label>Created by Order Line Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Created_by_Ship_To_Number__c</fullName>
        <description>Used specifically for the Mule process to pick up member card requests for RRD.</description>
        <label>Created by Ship To Number</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Did_Not_Enroll_Today__c</fullName>
        <description>Needed for reporting purposes so that we can filter out members who enrolled on a given day</description>
        <formula>Enrollment_Date__c != TODAY()</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Did Not Enroll Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Eligible_for_Member_Benefits__c</fullName>
        <formula>if(
OR(ISNULL(Enrollment_Date__c),
   Enrollment_Date__c &gt; TODAY(),
   Expiration_Date__c &lt; TODAY(), 
   ISPICKVAL(Cancellation_Type__c, &quot;RH Terminated&quot;),
   ISPICKVAL(Cancellation_Type__c, &quot;Member Terminated&quot;)
), false, true)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Eligible for Member Benefits</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date_Time__c</fullName>
        <label>Enrollment Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Enrollment_Date__c</fullName>
        <formula>DATEVALUE( Enrollment_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Enrollment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expiration_Date_Time__c</fullName>
        <label>Expiration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <formula>DATEVALUE( Expiration_Date_Time__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Expires_One_Year_From_Today__c</fullName>
        <description>Needed for reporting purposes so that we can filter on members who expire a year from a particular date</description>
        <formula>Expiration_Date__c = TODAY() + 365</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Expires One Year From Today</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>GetsChangedTandCs__c</fullName>
        <formula>IF(Enrollment_Date__c &gt;= DATE(2016,10,16),TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>GetsChangedTandCs</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Has_Valid_CC__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Has Valid CC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Historic_Audit_Trail__c</fullName>
        <label>Historic Audit Trail</label>
        <length>100000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>In_Target_Group__c</fullName>
        <formula>IF(
OR(
Member_State__c = &apos;IL&apos;,
Member_State__c = &apos;CT&apos;,
Member_State__c = &apos;HI&apos;,
Member_State__c = &apos;NC&apos;),true,false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>In Target Group?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Auto_Renew__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Auto Renew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Latest_CC_Expiration_Date__c</fullName>
        <label>Latest CC Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MAUI_Membership_ID__c</fullName>
        <label>MAUI Membership ID</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Address__c</fullName>
        <label>Member Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Address__c</fullName>
        <label>Member Card Address</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_City__c</fullName>
        <description>For sending a physical card</description>
        <label>Member Card City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Company_Name__c</fullName>
        <description>For sending a physical card</description>
        <label>Member Card Company Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Country__c</fullName>
        <description>For sending a physical card</description>
        <label>Member Card Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Postal_Code__c</fullName>
        <label>Member Card Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Request_Sent_Date__c</fullName>
        <description>Date that the request for a card was sent to RRD</description>
        <label>Member Card Request Sent Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Card_Scheduled_Request_Date__c</fullName>
        <description>The date that the Member Card request will be sent to RRD</description>
        <label>Member Card Scheduled Request Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Member_Card_State__c</fullName>
        <inlineHelpText>Use State abbreviations for US and Canada</inlineHelpText>
        <label>Member Card State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Status__c</fullName>
        <label>Member Card Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Scheduled</fullName>
                    <default>true</default>
                    <label>Not Scheduled</label>
                </value>
                <value>
                    <fullName>Scheduled</fullName>
                </value>
                <value>
                    <fullName>Request Sent</fullName>
                </value>
                <value>
                    <fullName>Card Sent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Member_Card_Street_1__c</fullName>
        <description>For sending a physical card</description>
        <label>Member Card Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Card_Street_2__c</fullName>
        <label>Member Card Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_City__c</fullName>
        <label>Member City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Company_Name__c</fullName>
        <label>Member Company Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Contact_Not_Order_Contact__c</fullName>
        <formula>IF(Contact__r.Id !=  Created_by_Order_ID__r.Contact_Sold_To__r.Id , TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Contact Not Order Contact</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Member_Country__c</fullName>
        <label>Member Country</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Country_for_Reports__c</fullName>
        <formula>CASE( Member_Country__c , &quot;CA&quot;, &quot;Canada&quot;, &quot;US&quot;, &quot;United States&quot;,&quot;Other Countries&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Member Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Email__c</fullName>
        <externalId>true</externalId>
        <label>Member Email</label>
        <required>true</required>
        <type>Email</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Member_First_Name__c</fullName>
        <label>zzzzMember First Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_ID__c</fullName>
        <description>9 digit auto-number, but must not re-use numbers of existing memberships. No leading zeroes.  Will need to know what number to start at for this sequence?  Is sequential ok, or need it be random so not &quot;predictable&quot;?</description>
        <label>Member ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Member_Last_Name__c</fullName>
        <label>zzzzMember Last Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Postal_Code__c</fullName>
        <label>Member Postal Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_State__c</fullName>
        <label>Member State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Street_1__c</fullName>
        <label>Member Street 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Member_Street_2__c</fullName>
        <label>Member Street 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipExternalID__c</fullName>
        <externalId>true</externalId>
        <label>MembershipExternalID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Membership_Card_Opt_in__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Member Card Opt In?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Membership_Card_Ship_Date__c</fullName>
        <description>The date on which the Membership Card will be sent.</description>
        <label>Member Card Ship Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Membership_Creation_Notes__c</fullName>
        <inlineHelpText>Enter notes to remind yourself for whom this membership was created for reference should there be an issue with Order creation.</inlineHelpText>
        <label>Membership Creation Notes</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Membership_Restore_Date__c</fullName>
        <label>Membership Restore Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Membership_Type__c</fullName>
        <label>Membership Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Complimentary - PR</fullName>
                </value>
                <value>
                    <fullName>Complimentary - VIP</fullName>
                </value>
                <value>
                    <fullName>Paid</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Once_was_Quebecois__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Once was Quebecois</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Phone_Order__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Phone Order</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RH_Renewal_CC_Entity_Code__c</fullName>
        <label>RH Renewal CC Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Renewal_CC_Expiration_Date__c</fullName>
        <label>RH Renewal CC Expiration Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Renewal_CC_Final_4_Digits__c</fullName>
        <label>RH Renewal CC Final 4 Digits</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Renewal_CC_Updated_DateTime__c</fullName>
        <label>RH Renewal CC Updated DateTime</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>RH_Renewal_CC_type__c</fullName>
        <label>RH Renewal CC type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RH_Renewal_CC_type_display__c</fullName>
        <formula>CASE( RH_Renewal_CC_type__c , 
&quot;visa&quot;, &quot;Visa&quot;,
&quot;masterCard&quot;, &quot;MasterCard&quot;,
&quot;americanExpress&quot;, &quot;American Express&quot;,
&quot;discover&quot;, &quot;Discover&quot;,
&quot;RH Card&quot;, &quot;RH Card&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>RH Renewal CC type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>RRD_Membership_Status__c</fullName>
        <description>MC = Membership Created, MU = Membership Updated, MS = Membership Card Shipped, MR = Membership Card Request sent to RRD</description>
        <label>RRD Membership Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>MC</fullName>
                </value>
                <value>
                    <fullName>MU</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renew_Email_Alert__c</fullName>
        <formula>IF(
OR(
Member_State__c = &quot;IL&quot;,
Member_State__c = &quot;CT&quot;,
Member_State__c = &quot;HI&quot;,
Member_State__c = &quot;NC&quot;,
Member_State__c = &quot;Illinois&quot;,
Member_State__c = &quot;Connecticut&quot;,
Member_State__c = &quot;Hawaii&quot;,
Member_State__c = &quot;North Carolina&quot;),
&quot;This membership is in a state that requires renewal email notifications. You may uncheck the box for Renew Email Opt In. However, this member will continue to receive email renewal notifications due to legal requirements.&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renew Email Alert</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renew_Email_Opt_In__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renew Email Opt In</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RenewalEmailSubjectLine__c</fullName>
        <description>Needed to dynamically set email subject in membership reminder template. set in batch monitor membership email.</description>
        <label>RenewalEmailSubjectLine</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_CC_Expiration_Date__c</fullName>
        <label>Renewal CC Expiration Date</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_CC_Final_4_Digits__c</fullName>
        <label>Renewal CC Final 4 Digits</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_CC_type__c</fullName>
        <label>Renewal CC type</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_CC_type_display__c</fullName>
        <formula>CASE( Renewal_CC_type__c , 
&quot;visa&quot;, &quot;Visa&quot;,
&quot;masterCard&quot;, &quot;MasterCard&quot;,
&quot;americanExpress&quot;, &quot;American Express&quot;,
&quot;discover&quot;, &quot;Discover&quot;,
&quot;RH Card&quot;, &quot;RH Card&quot;,
null)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Renewal CC type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Email_Notification__c</fullName>
        <label>Renewal Email Notification</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>60-Day Notice</fullName>
                </value>
                <value>
                    <fullName>30-Day Notice</fullName>
                </value>
                <value>
                    <fullName>5-Day Notice</fullName>
                </value>
                <value>
                    <fullName>3-Day Notice</fullName>
                </value>
                <value>
                    <fullName>1-Day Notice</fullName>
                </value>
                <value>
                    <fullName>1-Day Post Expiration</fullName>
                </value>
                <value>
                    <fullName>1-Day Post Termination</fullName>
                </value>
                <value>
                    <fullName>5-Day Post Expiration</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Order_Entity_Code__c</fullName>
        <description>Entity code that should be passed in CreateRenewal XML message. Will be updated in Salesforce code based on certain conditions.</description>
        <label>Renewal Order Entity Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Renewal_Reminder_Email_Sent_Date__c</fullName>
        <label>Renewal Reminder Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Term__c</fullName>
        <label>Renewal Term</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Annual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ReprocessBatch__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ReprocessBatch</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Send_To_Email__c</fullName>
        <description>Although NOT ideal, this is needed since we MUST use WF and WFEA for sending the Membership Email and we need to be able to flag additional emails.  WF dictates this is an email field NOT a mere string.  Apex Emails would get around this, however, the daily email limit prohibits us from using that solution.</description>
        <label>Send To Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Special_Enrollee__c</fullName>
        <description>// SMR-164
// Members who enrolled between 3/12 and 3/16
// According to our T&amp;Cs during this 4 day period (3/12/16-3/16/16), we told 
// customers we would email them at 30 days by default.
// Any Member meeting all of the following conditions: Enrollment Date &lt;= 3/16/16</description>
        <formula>IF(
AND(Enrollment_Date__c &gt;=  DATE(2016,3,12),Enrollment_Date__c &lt;=  DATE(2016,3,16)),
TRUE, FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Special Enrollee</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Welcome_Email_Requested_Datetime__c</fullName>
        <label>Welcome Email Sent Date</label>
        <type>DateTime</type>
    </fields>
    <label>Membership</label>
    <nameField>
        <label>Member ID</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Memberships</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>AddressFieldsNotBlankifScheduledDate</fullName>
        <active>false</active>
        <errorConditionFormula>AND(

 $Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
 $Profile.Name &lt;&gt; &quot;API Only&quot;,

NOT(ISBLANK( Member_Card_Scheduled_Request_Date__c )),


OR( 
ISBLANK ( Member_Card_Street_1__c ), 
ISBLANK ( Member_Card_City__c ), 
ISBLANK ( Member_Card_State__c ), 
ISBLANK ( Member_Card_Postal_Code__c ), 
ISBLANK ( Member_Card_Country__c ) 
) 
)</errorConditionFormula>
        <errorMessage>You cannot schedule a card to be sent without also setting an address to which the card will be sent.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CancelReasonReqdwithCancelType</fullName>
        <active>false</active>
        <description>Cancellation Reason is required if a Cancellation Type is selected.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;API Only&quot;, 
NOT(ISBLANK( TEXT(Cancellation_Type__c ))),
ISBLANK( TEXT( Cancellation_Reason__c ))
)</errorConditionFormula>
        <errorMessage>You must choose a Cancellation Reason when you choose a Cancellation Type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotCreateCompMemberships</fullName>
        <active>false</active>
        <description>Only Jamie Kasselman, Marcello Smith, and Ashima Seghal can create Comp memberships.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;API Only&quot;, 

NOT(CONTAINS($Setup.MembershipVRExcludedUser__c.UserId__c, $User.Username)),

OR(
ISCHANGED(Membership_Type__c),

AND(
ISNEW(),
OR(
ISPICKVAL (Membership_Type__c, &quot;Complimentary - PR&quot;),
ISPICKVAL (Membership_Type__c, &quot;Complimentary - VIP&quot;)))
)
)</errorConditionFormula>
        <errorMessage>You cannot create a Complimentary membership or edit a Paid membership and make it Complimentary.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotEditMuleUserCreatedMemberships</fullName>
        <active>false</active>
        <description>Users cannot edit Agreed to T&amp;C and Membership Type on Mule created Memberships</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;API Only&quot;, 
OR(
 CreatedBy.Username = &quot;mule@restorationhardware.com&quot;,
CreatedBy.Username = &quot;sfdcadmin1@restorationhardware.com&quot;),
OR(
ISCHANGED(Membership_Type__c ),
 ISCHANGED(Agreed_T_C__c ))
)</errorConditionFormula>
        <errorMessage>You cannot modify the Membership Type or the Agreed to T&amp;C.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotModifySomeCancelTypeReasons</fullName>
        <active>false</active>
        <description>Prevents users from updating the Cancellation Type and Cancellation Reason from system generated values.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;API Only&quot;,
$UserRole.Name  &lt;&gt; &quot;Administration&quot;,


OR(

AND(
ISCHANGED (Cancellation_Reason__c),
ISPICKVAL (Cancellation_Reason__c , &quot;Renewal failed&quot;)
),

AND(
ISCHANGED (Cancellation_Reason__c),
ISPICKVAL (Cancellation_Reason__c , &quot;Quebec&quot;)
),


AND(
ISCHANGED (Cancellation_Type__c),
ISPICKVAL (Cancellation_Type__c , &quot;Pending&quot;)
)
)
)</errorConditionFormula>
        <errorMessage>You cannot choose the Cancellation Reasons &quot;Renewal failed&quot; or &quot;Quebec,&quot; and you cannot choose or change the Cancellation Type &quot;Pending.&quot; If you have made one of these selections, please update the Cancellation Type and/or Cancellation Reason.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CannotSaveWOAgreedTC</fullName>
        <active>false</active>
        <description>Users cannot create paid memberships without checking the Agreed to T&amp;C box.</description>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;API Only&quot;, 
ISNEW(),
ISPICKVAL(Membership_Type__c, &quot;Paid&quot;),
Agreed_T_C__c = FALSE)</errorConditionFormula>
        <errorMessage>You cannot save Paid memberships without checking the box for Agreed to T&amp;Cs.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>CantEditMemberID</fullName>
        <active>false</active>
        <errorConditionFormula>AND(
$Profile.Name &lt;&gt; &quot;System Administrator&quot;, 
$Profile.Name &lt;&gt; &quot;API Only&quot;,  
PRIORVALUE(Name) != &apos;Automated&apos;,
ISCHANGED(Name))</errorConditionFormula>
        <errorMessage>You cannot edit the Member ID.</errorMessage>
    </validationRules>
</CustomObject>